media/css/main.css
/* ... */
#aux-nav > ul:not(:last-of-type) > li {
    background: url(../../img/amo2009/bg/border-header-user-options.gif) no-repeat top left;
}

#aux-nav > ul li ul li {
    background: #FFF url(../../img/amo2009/bg/header-dropdown.png) repeat-x top left;
    border-top: 1px solid #D0EBF4;
    width: 11em;
    text-align: left;
    margin: 0;
    padding: 0.3em 1em;
}

#aux-nav > ul.change li ul li {
    padding: 0;
}

#aux-nav > ul li ul li a {
    background-repeat: no-repeat;
    background-position: top left;
    display: block;
    margin: 0;
}

#aux-nav > ul.change li ul li a {
    padding: 0.3em 0.3em 0.3em 45px;
}

#aux-nav > ul li ul li.mobile a,
#aux-nav > ul li ul li.firefox a {
    background: url(../../img/amo2009/icons/logos-applications.gif) no-repeat 1em 0;
}
#aux-nav > ul li ul li.thunderbird a {
    background: url(../../img/amo2009/icons/logos-applications.gif) no-repeat 1em -50px;
}
#aux-nav > ul li ul li.sunbird a {
    background: url(../../img/amo2009/icons/logos-applications.gif) no-repeat 1em -100px;
}
#aux-nav > ul li ul li.seamonkey a {
    background: url(../../img/amo2009/icons/logos-applications.gif) no-repeat 1em -150px;
}

#aux-nav > ul a.controller:link,
#aux-nav > ul a.controller:visited,
#aux-nav > ul a.controller:focus,
#aux-nav > ul a.controller:hover,
#aux-nav > ul a.controller:active {
    display: block;
    padding: 0.7em 20px 0.5em 1em;
    background: url(../../img/amo2009/icons/arrows.gif) no-repeat;
    background-position: 95% -65px;
}

#aux-nav > ul a.controller:focus,
#aux-nav > ul a.controller:hover,
#aux-nav > ul a.controller:active {
    background-position: 95% -105px;
}

#aux-nav > ul ul {
    display: none;
    position: absolute;
    right: -3px;
    padding: 0;
    border-right: 3px solid #A2C2D7;
    border-bottom: 3px solid #A2C2D7;
}

#aux-nav ul.expanded {
    border-right: 3px solid #A2C2D7;
}

/* @end */

/* @end */

/* @group Footer */

#footer {
    background-image: url(../../img/amo2009/bg/footer.png);
    background-repeat: repeat-x;
    background-position: 0 50px;
    clear: both;
    padding-bottom: 1em;
}
#footer .section {
    min-height: 0;
}
#footer .primary {
    float: left;
    padding-top: 70px;
    background-image: url(../../img/amo2009/logo-mozilla.gif);
    background-repeat: no-repeat;
    background-position: 0 70px;
    clear: none;
}
#footer .secondary {
    float: right;
    text-align: right;
    clear: none;
}
#footer .secondary img {
    max-width: 190px;
    width: 100%;
}
#footer p {
    margin-bottom: 0;
    margin-left: 60px;
    margin-right: 1em;
}
#footer ul {
    font-size: 0.846em;
    line-height: 1.273;
    margin-top: 0.3em;
    padding: 0;
    margin-left: 60px;
    margin-right: 1.273em;
}
#footer ul li {
    display: inline;
    margin-right: 1em;
}
#footer .disclaimer {
    font-size: 0.846em;
    line-height: 1.273;
    color: #666666;
    margin-right: 1.273em;
}

#footer .languages {
    float: right;
    margin: 0;
}

/* @end */

/* @group Layout constructs */

.primary {
    width: 73.47%;
    float: right;
    clear: right;
    display: inline;
}
.secondary {
    width: 24.49%;
    float: left;
    clear: both;
    display: inline;
}

.primary .primary {
    width: 63.889%;
    float: left;
    clear: none;
}

.primary .secondary {
    margin-bottom: 2em;
    width: 33.333%;
    float: right;
    clear: none;
}

/* @group Inverse layout */

.inverse .primary {
    float: left;
    clear: left;
}
.inverse .secondary {
    float: right;
    clear: right;
}
.inverse .primary .primary {
    float: left;
    clear: none;
}
.section .inverse .primary {
    float: right;
    clear: none;
}
.inverse .primary .secondary {
    float: right;
    clear: none;
}
.section .inverse .secondary  {
    float: left;
    clear: none;
}

/* @end */

.column-wrapper {
    overflow: hidden;
}

.column {
    float: left;
    width: 32%;
    display: inline;
    margin-left: 2%;
}

.first {
    margin-left: 0;
}

/* @end */


/* @end */

/* @group Page Components */

.secondary fieldset {
    border: none;
    padding: 0;
}

.secondary select#add-to-collection {
    width: 100%;
    margin: 0.5em 0;
}

.secondary li a:link,
.secondary li a:visited,
.secondary li a:hover,
.secondary li a:focus,
.secondary li a:active {
    font-weight: bold;
}

/* @group Featured */

.featured {
    border: 4px solid #B5D9E5;
    background-color: #B5D9E5;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    margin-bottom: 2em;
    clear: both;
}
.featured-inner {
    background-color: #fff;
    border: 1px solid #2E5186;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
}

/* @end */

/* @group Article */

.article {
    background-color: #fff;
    border: 1px solid #C9E8F3;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    padding: 1em;
    overflow: hidden;
}
.secondary .article {
    margin-bottom: 1em;
}

.article h4 {
    clear: both;
    margin-bottom: 0.3em;
}

.article img .screenshot {
    margin-top: 1em;
    margin-right: 2em;
}

.article a:link,
.article a:visited,
.article a:hover,
.article a:focus,
.article a:active {
    font-weight: bold;
}

.article ul.further-navigation {
    border-top: none;
    padding-top: 0;
    margin-bottom: 0;
}

.article.userinput {
    overflow: visible;
}

/* @end */

/* @group Notification */

.notification {
    background-color: #FFFFFF;
    border: 1px solid #C8E8F3;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    padding: 1em;
    color: #444444;
    margin-bottom: 2em;
    position: relative;
}

.notification h3 {
    font-style: italic;
    font-weight: normal;
    line-height: 1.5em;
    color: #223355;
    margin-top: 0;
}

.about .notification h3 {
    display: inline;
}

.notification .continue {
    margin:0 0.5em 0 1em;
}

.html-rtl .notification .continue {
    margin:0 1em 0 0.5em;
}
/* ... */

